tests/safety/reject/broadcast_mismatch.keel
def main(sys: System); Io:
    println([1, 2, 3] + [1, 2])
